Work on monster activations.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -7,7 +7,7 @@ image="../ffg/img/Monster_Cultist.dds"
 traits=small
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -18,7 +18,7 @@ name="Deep One"
 image="../ffg/img/Monster_DeepOne.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -29,7 +29,7 @@ name="Deep One Hybrid"
 image="../ffg/img/Monster_DeepOneHybrid.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -40,7 +40,7 @@ activation=Generic
 image="../ffg/img/MonsterGhost.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -51,7 +51,7 @@ name="Hunting Horror"
 image="../ffg/img/Monster_HuntingHorror.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -62,7 +62,7 @@ activation=Generic
 image="../ffg/img/Monster_Riot.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -73,7 +73,7 @@ name="Star Spawn"
 image="../ffg/img/Monster_StarSpawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -84,7 +84,7 @@ name="Child of Dagon"
 image="../ffg/img/Monster_ChildOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -95,7 +95,7 @@ name="Hybrid Leader"
 image="../ffg/img/Monster_HybridLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -106,6 +106,6 @@ name="Priest of Dagon"
 image="../ffg/img/Monster_PriestOfDagon.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
