--- a/content/MoM/btt/monsters.ini
+++ b/content/MoM/btt/monsters.ini
@@ -5,6 +5,6 @@
 image="../ffg/img/Monster_Thrall.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
