--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -5,7 +5,7 @@ name="Child of the Goat"
 image="../ffg/img/Monster_ChildOfTheGoat.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -16,7 +16,7 @@ name="Dark Druid"
 image="../ffg/img/Monster_DarkDruid.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -27,7 +27,7 @@ name="Dark Young"
 image="../ffg/img/Monster_DarkYoung.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -38,7 +38,7 @@ name="Goat Spawn"
 image="../ffg/img/Monster_GoatSpawn.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -49,7 +49,7 @@ activation=Generic
 image="../ffg/img/Monster_Nightgaunt.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -60,7 +60,7 @@ name="Dunwich Horror"
 image="../ffg/img/Monster_DunwichHorror.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -71,6 +71,6 @@ activation=Generic
 image="../ffg/img/Monster_Wizard.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
