--- a/content/MoM/fa/monsters.ini
+++ b/content/MoM/fa/monsters.ini
@@ -5,7 +5,7 @@
 image="../ffg/img/Monster_Byakhee.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -16,6 +16,6 @@ activation=Generic
 image="../ffg/img/Monster_CrawlingOne.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
