--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -7,7 +7,7 @@ image="../ffg/img/Monster_Zombie.dds"
 traits=undead small
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -18,7 +18,7 @@ activation=Generic
 image="../ffg/img/Monster_Cthonian.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -29,7 +29,7 @@ name="Hound of Tindalos"
 image="../ffg/img/Monster_HoundOfTindalos.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -40,7 +40,7 @@ activation=Generic
 image="../ffg/img/Monster_Maniac.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -51,7 +51,7 @@ name="Mi Go"
 image="../ffg/img/Monster_MiGo.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -62,7 +62,7 @@ activation=Generic
 image="../ffg/img/Monster_Shoggoth.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -73,7 +73,7 @@ activation=Generic
 image="../ffg/img/Monster_Witch.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
 
@@ -84,6 +84,6 @@ name="Cult Leader"
 image="../ffg/img/Monster_CultLeader.dds"
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
-activation=Generic
+; activation=
 ; Optional health modifier from number of players
 ; health=0
