--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -4,7 +4,7 @@
 ; image to display
 image="../ffg/img/Monster_Cultist.dds"
 ; This will probably need some work to standardise
-traits=small
+traits=small humanoid
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
 ; activation=
