Work on example quest.

--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -1,7 +1,7 @@
 ; Saved by version: 0.5.3b
 [Quest]
 name=Example Scenario
-description=""
+description="Examples of features and used for testing."
 type=MoM
 minpany=-14
 minpanx=-1
@@ -18,13 +18,6 @@ side=TileSideAlleyCorner2
 xposition=0
 yposition=0
 side=TileSideAlley1
-
-[EventStart]
-xposition=3
-yposition=0
-text="You enter an alley..."
-add=TileStart TokenDoor
-trigger=EventStart
 
 [TokenDoor]
 xposition=5.25
@@ -61,3 +54,96 @@ side=TileSideEntryHall
 xposition=0
 yposition=-7
 side=TileSideInteriorHall
+
+
+[EventStart]
+text="This is the starting event (with custom buttons)"
+confirmtext="Skip"
+failtext="Explain"
+event=EventIntroSkip
+failevent=EventIntroText
+trigger=EventStart
+
+[EventIntroSkip]
+text=""
+event=MonsterCultist
+;add=TileEntry TileEntryCap TileExtension DoorLocked TokenSearchPuddle
+
+[EventIntroText]
+text="<b>bold</b> <i>italics</i> 1-4:{rnd:1:4} Investigator: {rnd:hero} {strenth} {agility} {lore} {influence} {will} {action} {success} {clue} {MAD01} {MAD06} {MAD09} {MAD20} {MAD21} {MAD22} {MAD23} newline\nAnd <color=red>C</color><color=green>o</color><color=blue>l</color><color=#FF00FF88>o</color>r."
+event=EventIntroBoard
+
+[EventIntroBoard]
+xposition=-1
+yposition=1
+text="We can place things using events like this."
+event=EventIntroAddToken
+;add=TileEntry TileEntryCap TileExtension DoorLocked
+
+[EventIntroAddToken]
+xposition=-3
+yposition=-2
+text="This moves to a different location"
+event=EventIntroBing
+; add=TokenSearchPuddle
+
+[EventIntroBing]
+xposition=-1
+yposition=-1
+text="We can highlight a square"
+highlight=true
+event=MonsterCultist
+
+[EventDoorOpen]
+xposition=0
+yposition=7
+text="Events can add and remove things\n(and all other event business)"
+event=EventTiles1E EventTilesno1E
+;add=TokenRunes
+;remove=DoorLocked
+
+[EventTiles1E]
+text="These tiles will place if we have MoM1E"
+; add=TileEndMoR TileCornerMoR
+flags=#MoM1E
+
+[EventTilesno1E]
+text="These tiles will place if we don't have MoM1E"
+; add=TileEnd TileCorner TileCornerCap
+
+[EventPuddle]
+text="This sets the key flag"
+event=EventPuddleNextRound
+set=key
+
+[EventPuddleNextRound]
+text="This will cause an event at the end of the next round"
+delayedevents=1:EventPuddleDelayed
+
+[EventPuddleDelayed]
+text="You searched the puddle last round."
+
+[EventEveryRound]
+text=""
+event=EventEveryRoundMonsters EventEveryRoundNoMonsters
+trigger=EndRound
+
+[EventEveryRoundMonsters]
+text=""
+flags=#monsters
+
+[EventEveryRoundNoMonsters]
+text="This event triggers every round in which there are no monsters"
+
+[EventRound2]
+text="This event triggers at the end of round 2"
+trigger=EndRound2
+
+[EventDefeatedCultist]
+text="This event triggers when a cultist is defeated"
+
+[EventEnd1]
+text="This event ends the scenario"
+
+[EventEnd2]
+text="This event ends the scenario differently"
