Work on example.

--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -1,4 +1,4 @@
-; Saved by version: 0.5.3b
+; Saved by version: 0.5.8b
 [Quest]
 name=Example Scenario
 description="Examples of features and used for testing."
@@ -19,42 +19,37 @@ xposition=0
 yposition=0
 side=TileSideAlley1
 
+[TokenDoorLocked]
+xposition=5.25
+yposition=0
+text="A Locked Door."
+type=TokenExplore
+
 [TokenDoor]
 xposition=5.25
 yposition=0
-text="A Door."
+text="A Door, you have the key."
 confirmtext="Explore"
-event=MonsterCultist
+event=EventDoorOpen
 type=TokenExplore
 
 [MonsterCultist]
 xposition=1.75
 yposition=-1.75
-text="A Cultist!"
-add=TileSecondAlley Tile2 Tile3 Tile4 Tile5
-remove=Token0
+text="Monsters and events and can do all event things, this event adds a Cultist."
+event=MonsterCultistTwo
 monster=MonsterCultist
 
-[Tile2]
-xposition=7
+[MonsterCultistTwo]
+xposition=1.75
+yposition=-1.75
+text="Another cultist."
+monster=MonsterCultist
+
+[TileSecond1E]
+xposition=0
 yposition=0
-side=TileSideYard1
-
-[Tile3]
-xposition=7
-yposition=-3.5
-side=TileSideLobby
-
-[Tile4]
-xposition=0
-yposition=-3.5
-side=TileSideEntryHall
-
-[Tile5]
-xposition=0
-yposition=-7
-side=TileSideInteriorHall
-
+side=TileSideRootCellar
 
 [EventStart]
 text="This is the starting event (with custom buttons)"
@@ -66,8 +61,7 @@ trigger=EventStart
 
 [EventIntroSkip]
 text=""
-event=MonsterCultist
-;add=TileEntry TileEntryCap TileExtension DoorLocked TokenSearchPuddle
+add=TileStart TokenPuddle TokenDoorLocked
 
 [EventIntroText]
 text="<b>bold</b> <i>italics</i> 1-4:{rnd:1:4} Investigator: {rnd:hero} {strenth} {agility} {lore} {influence} {will} {action} {success} {clue} {MAD01} {MAD06} {MAD09} {MAD20} {MAD21} {MAD22} {MAD23} newline\nAnd <color=red>C</color><color=green>o</color><color=blue>l</color><color=#FF00FF88>o</color>r."
@@ -78,38 +72,38 @@ xposition=-1
 yposition=1
 text="We can place things using events like this."
 event=EventIntroAddToken
-;add=TileEntry TileEntryCap TileExtension DoorLocked
+add=TileStart TokenDoorLocked
 
 [EventIntroAddToken]
 xposition=-3
 yposition=-2
 text="This moves to a different location"
 event=EventIntroBing
-; add=TokenSearchPuddle
+add=TokenPuddle
 
 [EventIntroBing]
 xposition=-1
 yposition=-1
 text="We can highlight a square"
 highlight=true
-event=MonsterCultist
 
 [EventDoorOpen]
 xposition=0
 yposition=7
-text="Events can add and remove things\n(and all other event business)"
+text=""
 event=EventTiles1E EventTilesno1E
-;add=TokenRunes
-;remove=DoorLocked
+remove=TokenDoor
 
 [EventTiles1E]
-text="These tiles will place if we have MoM1E"
-; add=TileEndMoR TileCornerMoR
+text="This tile will place if we have MoM1E"
 flags=#MoM1E
+event=MonsterCultist
+add=TileSecond1E
 
 [EventTilesno1E]
-text="These tiles will place if we don't have MoM1E"
-; add=TileEnd TileCorner TileCornerCap
+text="This tile will place if we don't have MoM1E"
+add=TileSecondAlley
+event=MonsterCultist
 
 [EventPuddle]
 text="This sets the key flag"
@@ -118,7 +112,13 @@ set=key
 
 [EventPuddleNextRound]
 text="This will cause an event at the end of the next round"
+event=EventPuddleKey
 delayedevents=1:EventPuddleDelayed
+
+[EventPuddleKey]
+text="Events can add and remove things\n(and all other event business)"
+add=TokenDoor
+remove=TokenDoorLocked TokenPuddle
 
 [EventPuddleDelayed]
 text="You searched the puddle last round."
@@ -147,3 +147,9 @@ text="This event ends the scenario"
 
 [EventEnd2]
 text="This event ends the scenario differently"
+
+[TokenPuddle]
+xposition=1.29868
+yposition=2.306415
+text="Tokens are events which can trigger other events"
+event=EventPuddle
