Fixing up example.

--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -23,7 +23,7 @@ side=TileSideAlley1
 xposition=5.25
 yposition=0
 text="A Locked Door."
-type=TokenExplore
+type=TokenSight
 
 [TokenDoor]
 xposition=5.25
@@ -41,8 +41,8 @@ event=MonsterCultistTwo
 monster=MonsterCultist
 
 [MonsterCultistTwo]
-xposition=1.75
-yposition=-1.75
+xposition=5.644921
+yposition=-2.401738
 text="Another cultist."
 monster=MonsterCultist
 
@@ -68,42 +68,42 @@ text="<b>bold</b> <i>italics</i> 1-4:{rnd:1:4} Investigator: {rnd:hero} {strenth
 event=EventIntroBoard
 
 [EventIntroBoard]
-xposition=-1
-yposition=1
+xposition=3.5
+yposition=1.75
 text="We can place things using events like this."
 event=EventIntroAddToken
 add=TileStart TokenDoorLocked
 
 [EventIntroAddToken]
-xposition=-3
-yposition=-2
+xposition=1.287315
+yposition=2.276923
 text="This moves to a different location"
 event=EventIntroBing
 add=TokenPuddle
 
 [EventIntroBing]
-xposition=-1
-yposition=-1
-text="We can highlight a square"
+xposition=6.050249
+yposition=1.319796
+text="We can highlight a location"
 highlight=true
 
 [EventDoorOpen]
-xposition=0
-yposition=7
+xposition=3.54011
+yposition=-2.285282
 text=""
 event=EventTiles1E EventTilesno1E
 remove=TokenDoor
 
 [EventTiles1E]
 text="This tile will place if we have MoM1E"
-flags=#MoM1E
 event=MonsterCultist
 add=TileSecond1E
+flags=#MoM1E
 
 [EventTilesno1E]
 text="This tile will place if we don't have MoM1E"
-add=TileSecondAlley
 event=MonsterCultist
+add=TileSecondAlley
 
 [EventPuddle]
 text="This sets the key flag"
