--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -1,4 +1,4 @@
-; Saved by version: 0.5.8b
+; Saved by version: 0.6.1b
 [Quest]
 name=Example Scenario
 description="Examples of features and used for testing."
@@ -23,27 +23,32 @@ side=TileSideAlley1
 xposition=5.25
 yposition=0
 text="A Locked Door."
+event1=
+button1="Confirm"
 type=TokenSight
 
 [TokenDoor]
 xposition=5.25
 yposition=0
 text="A Door, you have the key."
-confirmtext="Explore"
-event=EventDoorOpen
+event1=EventDoorOpen
+button1="{action} Explore"
 type=TokenExplore
 
 [MonsterCultist]
 xposition=1.75
 yposition=-1.75
 text="Monsters and events and can do all event things, this event adds a Cultist."
-event=MonsterCultistTwo
+event1=MonsterCultistTwo
+button1="Confirm"
 monster=MonsterCultist
 
 [MonsterCultistTwo]
 xposition=5.644921
 yposition=-2.401738
 text="Another cultist."
+event1=
+button1="Confirm"
 monster=MonsterCultist
 
 [TileSecond1E]
@@ -53,103 +58,133 @@ side=TileSideRootCellar
 
 [EventStart]
 text="This is the starting event (with custom buttons)"
-confirmtext="Skip"
-failtext="Explain"
-event=EventIntroSkip
-failevent=EventIntroText
+event1=EventIntroSkip
+event2=EventIntroText
+button1="Skip"
+button2="Explain"
 trigger=EventStart
 
 [EventIntroSkip]
 text=""
+event1=
+button1="Confirm"
 add=TileStart TokenPuddle TokenDoorLocked
 
 [EventIntroText]
 text="<b>bold</b> <i>italics</i> 1-4:{rnd:1:4} Investigator: {rnd:hero} {strenth} {agility} {lore} {influence} {will} {action} {success} {clue} {MAD01} {MAD06} {MAD09} {MAD20} {MAD21} {MAD22} {MAD23} newline\nAnd <color=red>C</color><color=green>o</color><color=blue>l</color><color=#FF00FF88>o</color>r."
-event=EventIntroBoard
+event1=EventIntroBoard
+button1="Confirm"
 
 [EventIntroBoard]
 xposition=3.5
 yposition=1.75
 text="We can place things using events like this."
-event=EventIntroAddToken
+event1=EventIntroAddToken
+button1="Confirm"
 add=TileStart TokenDoorLocked
 
 [EventIntroAddToken]
 xposition=1.287315
 yposition=2.276923
 text="This moves to a different location"
-event=EventIntroBing
+event1=EventIntroBing
+button1="Confirm"
 add=TokenPuddle
 
 [EventIntroBing]
 xposition=6.050249
 yposition=1.319796
-text="We can highlight a location"
+text="We can highlight a square"
 highlight=true
+event1=
+button1="Confirm"
 
 [EventDoorOpen]
 xposition=3.54011
 yposition=-2.285282
 text=""
-event=EventTiles1E EventTilesno1E
+event1=EventTiles1E EventTilesno1E
+button1="Confirm"
 remove=TokenDoor
 
 [EventTiles1E]
 text="This tile will place if we have MoM1E"
-event=MonsterCultist
+event1=MonsterCultist
+button1="Confirm"
 add=TileSecond1E
 flags=#MoM1E
 
 [EventTilesno1E]
 text="This tile will place if we don't have MoM1E"
-event=MonsterCultist
+event1=MonsterCultist
+button1="Confirm"
 add=TileSecondAlley
 
 [EventPuddle]
 text="This sets the key flag"
-event=EventPuddleNextRound
+event1=EventPuddleNextRound
+button1="Confirm"
 set=key
 
 [EventPuddleNextRound]
 text="This will cause an event at the end of the next round"
-event=EventPuddleKey
+event1=EventPuddleKey
+button1="Confirm"
 delayedevents=1:EventPuddleDelayed
 
 [EventPuddleKey]
 text="Events can add and remove things\n(and all other event business)"
+event1=
+button1="Confirm"
 add=TokenDoor
 remove=TokenDoorLocked TokenPuddle
 
 [EventPuddleDelayed]
 text="You searched the puddle last round."
+event1=
+button1="Confirm"
 
 [EventEveryRound]
 text=""
-event=EventEveryRoundMonsters EventEveryRoundNoMonsters
+event1=EventEveryRoundMonsters EventEveryRoundNoMonsters
+button1="Confirm"
 trigger=EndRound
 
 [EventEveryRoundMonsters]
 text=""
+event1=
+button1="Confirm"
 flags=#monsters
 
 [EventEveryRoundNoMonsters]
 text="This event triggers every round in which there are no monsters"
+event1=
+button1="Confirm"
 
 [EventRound2]
 text="This event triggers at the end of round 2"
+event1=
+button1="Confirm"
 trigger=EndRound2
 
 [EventDefeatedCultist]
 text="This event triggers when a cultist is defeated"
+event1=
+button1="Confirm"
 
 [EventEnd1]
 text="This event ends the scenario"
+event1=
+button1="Confirm"
 
 [EventEnd2]
 text="This event ends the scenario differently"
+event1=
+button1="Confirm"
 
 [TokenPuddle]
 xposition=1.29868
 yposition=2.306415
 text="Tokens are events which can trigger other events"
-event=EventPuddle
+event1=EventPuddle
+button1="{action} Search"
