Adding action symbols to quests.

--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -428,7 +428,7 @@ xposition=3
 yposition=4
 text="<i>The caretaker's cabin has seen better days.</i>\n\nYou may spend an action to open this door."
 event1=EventOpenHut
-button1="Confirm"
+button1="{action} Open"
 rotation=90
 
 [MonsterEntry]
@@ -534,7 +534,7 @@ xposition=3
 yposition=-3
 text="<i>Door of Reflection</i>\n\nYou have the key to this door and may open it as an action."
 event1=EventOpenDoor1
-button1="Confirm"
+button1="{action} Open"
 color=red
 rotation=90
 
@@ -548,7 +548,7 @@ xposition=7
 yposition=5
 text="There is a gap between the floor boards in the corner."
 event1=EventSearch3
-button1="Confirm"
+button1="{action} Search"
 randomevents=true
 
 [DoorCrypt2]
@@ -567,7 +567,7 @@ xposition=3
 yposition=-4
 text="<i>Door of Pain</i>\n\nYou have the key to this door and may open it as an action."
 event1=EventOpenDoor2
-button1="Confirm"
+button1="{action} Open"
 color=red
 rotation=90
 
@@ -586,7 +586,7 @@ xposition=4
 yposition=-5
 text="<i>Door of Illusion</i>\n\nYou have the key to this door and may open it as an action."
 event1=EventOpenDoor3
-button1="Confirm"
+button1="{action} Open"
 color=red
 
 [DoorCrypt4]
@@ -602,7 +602,7 @@ xposition=6
 yposition=-5
 text="<i>Door of Endurance</i>\n\nYou have the key to this door and may open it as an action."
 event1=EventOpenDoor4
-button1="Confirm"
+button1="{action} Open"
 color=red
 
 [TokenKey4]
@@ -610,7 +610,7 @@ xposition=-5
 yposition=-1
 text="Something glistens in the bushes."
 event1=EventSearch4
-button1="Confirm"
+button1="{action} Search"
 randomevents=true
 
 [TokenKey1]
@@ -618,7 +618,7 @@ xposition=15
 yposition=1
 text="An ornamental vase lies on the ground."
 event1=EventSearch1
-button1="Confirm"
+button1="{action} Search"
 randomevents=true
 
 [TokenKey2]
@@ -626,7 +626,7 @@ xposition=5
 yposition=9
 text="A small pouch lies on the ground."
 event1=EventSearch2
-button1="Confirm"
+button1="{action} Search"
 randomevents=true
 
 [MonsterCaretaker]
@@ -658,7 +658,7 @@ xposition=-7
 yposition=-4
 text="Something has slipped between the cracks in the stones."
 event1=EventSearch5
-button1="Confirm"
+button1="{action} Search"
 randomevents=true
 
 [DoorCryptUnlocked5]
@@ -666,7 +666,7 @@ xposition=12
 yposition=-4
 text="You have the key to this door and may open it as an action."
 event1=EventOpenDoor5
-button1="Confirm"
+button1="{action} Open"
 color=red
 
 [MonsterStairs]
