--- a/quests/D2E/example/quest.ini
+++ b/quests/D2E/example/quest.ini
@@ -1,4 +1,4 @@
-; Saved by version: 0.4.1b
+; Saved by version: 0.6.1b
 [Quest]
 name=Example Quest
 description="Examples of features and used for testing."
@@ -57,28 +57,32 @@ rotation=180
 
 [EventStart]
 text="This is the starting event (with custom buttons)"
-confirmtext="Skip"
-failtext="Explain"
-event=EventIntroSkip
-failevent=EventIntroText
+event1=EventIntroSkip
+event2=EventIntroText
+button1="Skip"
+button2="Explain"
 trigger=EventStart
 
 [EventIntroSkip]
 text=""
-event=MonsterHybridIsh
+event1=MonsterHybridIsh
+button1="Confirm"
 add=TileEntry TileEntryCap TileExtension DoorLocked TokenSearchPuddle
 
 [EventIntroText]
 text="<b>bold</b> <i>italics</i> 1-4:{rnd:1:4} Hero: {rnd:hero} {heart} {shield} {fatigue} {might} {will} {knowledge} {awareness} {action} {surge} newline\nAnd <color=red>C</color><color=green>o</color><color=blue>l</color><color=#FF00FF88>o</color>r."
-event=EventIntroThreat
+event1=EventIntroThreat
+button1="Confirm"
 
 [EventIntroThreat]
 text="This will call a silent event to increase the threat if there are 4 heros."
-event=EventIntro4HThreat EventIntroBoard
+event1=EventIntro4HThreat EventIntroBoard
+button1="Confirm"
 
 [EventIntro4HThreat]
 text=""
-event=EventIntroBoard
+event1=EventIntroBoard
+button1="Confirm"
 flags=#4hero
 threat=1.5
 
@@ -86,14 +90,16 @@ threat=1.5
 xposition=-1
 yposition=1
 text="We can place things using events like this."
-event=EventIntroAddToken
+event1=EventIntroAddToken
+button1="Confirm"
 add=TileEntry TileEntryCap TileExtension DoorLocked
 
 [EventIntroAddToken]
 xposition=-3
 yposition=-2
 text="This moves to a different location"
-event=EventIntroBing
+event1=EventIntroBing
+button1="Confirm"
 add=TokenSearchPuddle
 
 [EventIntroBing]
@@ -101,11 +107,13 @@ xposition=-1
 yposition=-1
 text="We can highlight a square"
 highlight=true
-event=EventSelection
+event1=EventSelection
+button1="Confirm"
 
 [EventDoorOpen]
 text="We can decrease the threat when doors are opened."
-event=EventAddThings
+event1=EventAddThings
+button1="Confirm"
 flags=key
 threat=-0.8
 
@@ -113,84 +121,114 @@ threat=-0.8
 xposition=0
 yposition=7
 text="Events can add and remove things\n(and all other event business)"
-event=EventTilesMoR EventTilesnoMoR
+event1=EventTilesMoR EventTilesnoMoR
+button1="Confirm"
 add=TokenRunes
 remove=DoorLocked
 
 [EventTilesMoR]
 text="These tiles will place if we have MoR"
+event1=
+button1="Confirm"
 add=TileEndMoR TileCornerMoR
 flags=#MoR
 
 [EventTilesnoMoR]
 text="These tiles will place if we don't have MoR"
+event1=
+button1="Confirm"
 add=TileEnd TileCorner TileCornerCap
 
 [EventPuddle]
 text="We can set threat to a specific level"
-event=EventPuddleKey
+event1=EventPuddleKey
+button1="Confirm"
 threat=@1
 
 [EventPuddleKey]
 text="This sets the key flag"
-event=EventPuddleNextRound
+event1=EventPuddleNextRound
+button1="Confirm"
 set=key
 
 [EventPuddleNextRound]
 text="This will cause an event at the end of the next round"
+event1=
+button1="Confirm"
 delayedevents=1:EventPuddleDelayed
 
 [EventPuddleDelayed]
 text="You searched the puddle last round."
+event1=
+button1="Confirm"
 
 [EventEveryRound]
 text=""
-event=EventEveryRoundMonsters EventEveryRoundNoMonsters
+event1=EventEveryRoundMonsters EventEveryRoundNoMonsters
+button1="Confirm"
 trigger=EndRound
 
 [EventEveryRoundMonsters]
 text=""
+event1=
+button1="Confirm"
 flags=#monsters
 
 [EventEveryRoundNoMonsters]
 text="This event triggers every round in which there are no monsters"
+event1=
+button1="Confirm"
 
 [EventRound2]
 text="This event triggers at the end of round 2"
+event1=
+button1="Confirm"
 trigger=EndRound2
 
 [EventDefeatedFleshMoulders]
 text="This event triggers when the FM are defeated"
+event1=
+button1="Confirm"
 
 [EventDefeatedUniqueZombie]
 text="This event triggers when the unique zombie is defeated"
+event1=
+button1="Confirm"
 
 [EventSelection]
 text="This event has the user select 2-3 heros"
-event=EventHighlight
+event1=EventHighlight
+button1="Confirm"
 minhero=2
 maxhero=3
 
 [EventHighlight]
 text="This hightlights heros previously selected"
-event=MonsterHybridIsh
+event1=MonsterHybridIsh
+button1="Confirm"
 hero=EventSelection
 
 [EventMorale]
 text="This event triggers at less than 0 morale"
-event=EventEnd1
+event1=EventEnd1
+button1="Confirm"
 
 [EventEnd1]
 text="This event ends the quest"
+event1=
+button1="Confirm"
 
 [EventEnd2]
 text="This event ends the quest differently"
+event1=
+button1="Confirm"
 
 [DoorLocked]
 xposition=0
 yposition=4
 text="This door doesn't have a usable event at first so it cannot be confirmed"
-event=EventDoorOpen
+event1=EventDoorOpen
+button1="{action} Open"
 color=Red
 rotation=90
 
@@ -198,20 +236,25 @@ rotation=90
 xposition=-3
 yposition=-2
 text="tokens are events which trigger other events"
-event=EventPuddle
+event1=EventPuddle
+button1="{action} Search"
 
 [TokenRunes]
 xposition=0
 yposition=8
 text="Events can have tests"
-event=MonsterFleshMoulders
-failevent=MonsterZombie
+event1=MonsterFleshMoulders
+event2=MonsterZombie
+button1="Pass"
+button2="Fail"
 type=TokenObjectiveRed
 
 [MonsterHybridIsh]
 xposition=-1
 yposition=-1
 text="This adds Hybrid Sentinel, or failing that anything 'cave' and 'small'"
+event1=
+button1="Confirm"
 add=TokenRedOrBlueA TokenRedOrBlueB
 set=bluehidden redhidden
 monster=MonsterHybridSentinel
@@ -221,7 +264,8 @@ traits=cave small
 xposition=0
 yposition=7
 text="This will place individual flesh moulders based on hero count"
-event=MonsterZombie
+event1=MonsterZombie
+button1="Confirm"
 monster=FleshMoulder
 placement2=MPlaceFmMaster MPlaceFmMinion1
 placement3=MPlaceFmMaster MPlaceFmMinion1 MPlaceFmMinion2
@@ -231,6 +275,8 @@ placement4=MPlaceFmMaster MPlaceFmMinion1 MPlaceFmMinion2 MPlaceFmMinion3
 xposition=-1
 yposition=6
 text="This adds zombies with a unique."
+event1=
+button1="Confirm"
 monster=Zombie
 unique=true
 uniquetitle="Optional Name"
@@ -257,7 +303,8 @@ yposition=5
 xposition=2
 yposition=-2
 text=""
-event=TokenRedOrBlueABlue TokenRedOrBlueARed
+event1=TokenRedOrBlueABlue TokenRedOrBlueARed
+button1="Confirm"
 randomevents=true
 type=TokenObjectiveBack
 
@@ -265,6 +312,8 @@ type=TokenObjectiveBack
 xposition=2
 yposition=-2
 text=""
+event1=
+button1="Confirm"
 add=TokenRedOrBlueABlue
 remove=TokenRedOrBlueA
 flags=bluehidden
@@ -275,6 +324,8 @@ type=TokenObjectiveBlue
 xposition=2
 yposition=-2
 text=""
+event1=
+button1="Confirm"
 add=TokenRedOrBlueARed
 remove=TokenRedOrBlueA
 flags=redhidden
@@ -285,14 +336,17 @@ type=TokenObjectiveRed
 xposition=2
 yposition=-1
 text=""
-event=TokenRedOrBlueBBlue TokenRedOrBlueBRed
-type=TokenObjectiveBack
+event1=TokenRedOrBlueBBlue TokenRedOrBlueBRed
+button1="Confirm"
 randomevents=true
+type=TokenObjectiveBack
 
 [TokenRedOrBlueBBlue]
 xposition=2
 yposition=-1
 text=""
+event1=
+button1="Confirm"
 add=TokenRedOrBlueBBlue
 remove=TokenRedOrBlueB
 flags=bluehidden
@@ -303,6 +357,8 @@ type=TokenObjectiveBlue
 xposition=2
 yposition=-1
 text=""
+event1=
+button1="Confirm"
 add=TokenRedOrBlueBRed
 remove=TokenRedOrBlueB
 flags=redhidden
