Adding more monster types.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -43,6 +43,7 @@ image="../ffg/img/MonsterGhost.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=spirit
 
 [MonsterHuntingHorror]
 ; Optional name for display (if spaces or other formatting required)
@@ -54,6 +55,7 @@ image="../ffg/img/Monster_HuntingHorror.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterRiot]
 ; Optional name for display (if spaces or other formatting required)
@@ -76,6 +78,7 @@ image="../ffg/img/Monster_StarSpawn.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterChildOfDagon]
 ; Optional name for display (if spaces or other formatting required)
@@ -109,3 +112,4 @@ image="../ffg/img/Monster_PriestOfDagon.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
