--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -65,6 +65,7 @@ image="../ffg/img/Monster_Shoggoth.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterWitch]
 ; Optional name for display (if spaces or other formatting required)
@@ -76,6 +77,7 @@ image="../ffg/img/Monster_Witch.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterCultLeader]
 ; Optional name for display (if spaces or other formatting required)
