--- a/content/MoM/cotw/monsters.ini
+++ b/content/MoM/cotw/monsters.ini
@@ -19,6 +19,7 @@ image="../ffg/img/Monster_DarkDruid.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterDarkYoung]
 ; Optional name for display (if spaces or other formatting required)
@@ -30,6 +31,7 @@ image="../ffg/img/Monster_DarkYoung.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterGoatSpawn]
 ; Optional name for display (if spaces or other formatting required)
