Checking of tile reverse.

--- a/content/D2E/base/tiles.ini
+++ b/content/D2E/base/tiles.ini
@@ -1,55 +1,3 @@
-;Each named tile has A and B sides (in the case of D2E this is just A/B)
-[Tile1]
-sidea=1A
-sideb=1B
-; optional priority, allows content packs to duplicate content and replace items
-; priority=0
-; optional limit (used for duplicate tiles)
-; limit=1
-
-[Tile2]
-sidea=2A
-sideb=2B
-
-[Tile3]
-sidea=3A
-sideb=3B
-
-[Tile4]
-sidea=4A
-sideb=4B
-
-[Tile5]
-sidea=5A
-sideb=5B
-
-[Tile6]
-sidea=6A
-sideb=6B
-
-[Cap]
-sidea=CapA
-sideb=CapB
-limit=8
-
-[Entrance]
-sidea=EntranceA
-sideb=EntranceB
-
-[EntranceStair]
-sidea=EntranceStairA
-sideb=EntranceStairB
-
-[Extension]
-sidea=ExtensionA
-sideb=ExtensionB
-limit=6
-
-[Transition]
-sidea=TransitionA
-sideb=TransitionB
-limit=2
-
 ; Each tile side has a section
 [TileSide1A]
 ; Optional name for display (if spaces or other formatting required)
@@ -65,24 +13,28 @@ image="../ffg/img/001A.dds"
 traits=water outside
 ; optional priority, allows content packs to duplicate content and replace items
 ; priority=0
+reverse=TileSide1B
 
 [TileSide1B]
 top=197
 left=105
 image="../ffg/img/001B.dds"
 traits=throne inside
+reverse=TileSide1A
 
 [TileSide2A]
 top=197
 left=197
 image="../ffg/img/002A.dds"
 traits=water outside
+reverse=TileSide2B
 
 [TileSide2B]
 top=197
 left=197
 image="../ffg/img/002B.dds"
 traits=dirt inside
+reverse=TileSide2A
 
 [TileSide3A]
 top=289
