--- a/content/MoM/mom1e/investigators.ini
+++ b/content/MoM/mom1e/investigators.ini
@@ -7,6 +7,7 @@ traits=male
 name=""Ashcan" Pete"
 image="../ffg/img/Circle_Investigator_Ashcan_Pete.dds"
 traits=male
+item=ItemUniqueDukeTheDog
 
 [HeroGloriaGoldberg]
 name="Gloria Goldberg"
@@ -32,6 +33,7 @@ traits=male
 name="Kate Winthrop"
 image="../ffg/img/Circle_Investigator_Kate_Winthrop.dds"
 traits=female
+item=ItemUniqueFluxStabilizer
 
 [HeroSisterMary]
 name="Sister Mary"
