Item editing working.

--- a/content/MoM/base/items.ini
+++ b/content/MoM/base/items.ini
@@ -1,18 +1,22 @@
 [ItemCommon18Derringer]
 name={ffg:COMMON_ITEM_18_DERRINGER}
 image=../ffg/img/Item_Common18Derringer.dds
+traits=weapon
 
 [ItemCommon38Revolver]
 name={ffg:COMMON_ITEM_38_REVOLVER}
 image=../ffg/img/Item_Common38Revolver.dds
+traits=weapon firearm
 
 [ItemCommon45Automatic]
 name={ffg:COMMON_ITEM_45_AUTOMATIC}
 image=../ffg/img/Item_Common45Automatic.dds
+traits=weapon firearm
 
 [ItemCommon2x4]
 name={ffg:COMMON_ITEM_2x4}
 image=../ffg/img/Item_Common2x4.dds
+traits=weapon
 
 [ItemCommonArcaneManuscript]
 name={ffg:COMMON_ITEM_ARCANE_MANUSCRIPT}
@@ -37,6 +41,7 @@ image=../ffg/img/Item_CommonBullseyeLantern.dds
 [ItemCommonCandles]
 name={ffg:COMMON_ITEM_CANDLES}
 image=../ffg/img/Item_CommonCandles.dds
+trait=light
 
 [ItemCommonCarbineRifle]
 name={ffg:COMMON_ITEM_CARBINE_RIFLE}
